tests/aster/x/mochi/rosetta/fibonacci-word.error
error[A024]: unknown function substring
  --> /workspace/mochi/tests/rosetta/x/Mochi/fibonacci-word.mochi:8:14

  8 |     let ch = substring(s, i, i+1)
    |              ^

help:
  Declare substring before use
